Adding disk usage to general dashboard

--- a/manifests/grafana-dashboardDefinitions.yaml
+++ b/manifests/grafana-dashboardDefinitions.yaml
@@ -4793,7 +4793,6 @@ items:
           "editable": true,
           "gnetId": null,
           "graphTooltip": 0,
-          "id": 25,
           "links": [
 
           ],
@@ -5670,6 +5669,114 @@ items:
                       "align": false,
                       "alignLevel": null
                   }
+              },
+              {
+                  "aliasColors": {
+
+                  },
+                  "bars": false,
+                  "dashLength": 10,
+                  "dashes": false,
+                  "datasource": "prometheus",
+                  "fieldConfig": {
+                      "defaults": {
+                          "custom": {
+
+                          }
+                      },
+                      "overrides": [
+
+                      ]
+                  },
+                  "fill": 1,
+                  "fillGradient": 0,
+                  "gridPos": {
+                      "h": 8,
+                      "w": 12,
+                      "x": 0,
+                      "y": 24
+                  },
+                  "hiddenSeries": false,
+                  "id": 19,
+                  "legend": {
+                      "avg": false,
+                      "current": false,
+                      "max": false,
+                      "min": false,
+                      "show": true,
+                      "total": false,
+                      "values": false
+                  },
+                  "lines": true,
+                  "linewidth": 1,
+                  "nullPointMode": "null",
+                  "percentage": false,
+                  "pluginVersion": "7.1.0",
+                  "pointradius": 2,
+                  "points": false,
+                  "renderer": "flot",
+                  "seriesOverrides": [
+
+                  ],
+                  "spaceLength": 10,
+                  "stack": false,
+                  "steppedLine": false,
+                  "targets": [
+                      {
+                          "expr": "max by (instance, device) (\n  node_filesystem_avail_bytes{job=\"node-exporter\", fstype!=\"\", device=\"/dev/mapper/ubuntu--vg-ubuntu--lv\"}\n)",
+                          "interval": "",
+                          "legendFormat": "{{ instance }}",
+                          "refId": "A"
+                      }
+                  ],
+                  "thresholds": [
+
+                  ],
+                  "timeFrom": null,
+                  "timeRegions": [
+
+                  ],
+                  "timeShift": null,
+                  "title": "Free Disk Space",
+                  "tooltip": {
+                      "shared": true,
+                      "sort": 0,
+                      "value_type": "individual"
+                  },
+                  "type": "graph",
+                  "xaxis": {
+                      "buckets": null,
+                      "mode": "time",
+                      "name": null,
+                      "show": true,
+                      "values": [
+
+                      ]
+                  },
+                  "yaxes": [
+                      {
+                          "$$hashKey": "object:116",
+                          "format": "decbytes",
+                          "label": null,
+                          "logBase": 1,
+                          "max": null,
+                          "min": null,
+                          "show": true
+                      },
+                      {
+                          "$$hashKey": "object:117",
+                          "format": "short",
+                          "label": null,
+                          "logBase": 1,
+                          "max": null,
+                          "min": null,
+                          "show": true
+                      }
+                  ],
+                  "yaxis": {
+                      "align": false,
+                      "alignLevel": null
+                  }
               }
           ],
           "refresh": false,
@@ -5703,7 +5810,7 @@ items:
           "timezone": "",
           "title": "General Cluster View",
           "uid": "M9DzsHtMk",
-          "version": 3
+          "version": 1
       }
   kind: ConfigMap
   metadata:
