--- a/manifests/grafana-config.yaml
+++ b/manifests/grafana-config.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-data:
-  grafana.ini: W2F1dGguYW5vbnltb3VzXQplbmFibGVkID0gdHJ1ZQo=
-kind: Secret
-metadata:
-  name: grafana-config
-  namespace: monitoring
-type: Opaque
+sections:
+  auth.anonymous:
+    enabled: true
