--- a/manifests/grafana-config.yaml
+++ b/manifests/grafana-config.yaml
@@ -1,3 +1,13 @@
-sections:
-  auth.anonymous:
-    enabled: true
+apiVersion: v1
+data:
+  grafana.ini: W2F1dGguYW5vbnltb3VzXQplbmFibGVkID0gdHJ1ZQo=
+kind: Secret
+metadata:
+  labels:
+    app.kubernetes.io/component: grafana
+    app.kubernetes.io/name: grafana
+    app.kubernetes.io/part-of: kube-prometheus
+    app.kubernetes.io/version: 7.4.3
+  name: grafana-config
+  namespace: monitoring
+type: Opaque
