--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -83,3 +83,5 @@ resources:
 - manifests/prometheus-serviceAccount.yaml
 - manifests/prometheus-serviceMonitor.yaml
 - manifests/prometheus-service.yaml
+- manifests/kubernetes-kubeControllerManagerPrometheusDiscoveryService.yaml
+- manifests/kubernetes-kubeSchedulerPrometheusDiscoveryService.yaml
