eol: Enable watchdog notification

--- a/manifests/alertmanager-secret.yaml
+++ b/manifests/alertmanager-secret.yaml
@@ -31,6 +31,11 @@ stringData:
     receivers:
     - name: Default
     - name: Watchdog
+      email_configs:
+      - to: felipe.espinoza.r@uchile.cl
+        from: no-reply@eol.uchile.cl
+        smarthost: mtaprod.uchile.cl:25
+        require_tls: false
     - name: Critical
       email_configs:
       - to: felipe.espinoza.r@uchile.cl
