--- a/eol/alertmanager.yaml
+++ b/eol/alertmanager.yaml
@@ -18,6 +18,11 @@ inhibit_rules:
 receivers:
 - name: Default
 - name: Watchdog
+  email_configs:
+  - to: felipe.espinoza.r@uchile.cl
+    from: no-reply@eol.uchile.cl
+    smarthost: mtaprod.uchile.cl:25
+    require_tls: false
 - name: Critical
   email_configs:
   - to: felipe.espinoza.r@uchile.cl
