--- a/manifests/alertmanager-secret.yaml
+++ b/manifests/alertmanager-secret.yaml
@@ -31,6 +31,8 @@ stringData:
     receivers:
     - name: Default
     - name: Watchdog
+      webhook_configs:
+      - url: 'http://discord:9094'
     - name: Critical
       email_configs:
       - to: felipe.espinoza.r@uchile.cl
